--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,14 +3,11 @@
 @tailwind utilities;
 
 @layer base {
-  @font-face {
-    font-family: Proxima Nova;
-    font-weight: 400;
-    src: url(/fonts/proxima-nova/400-regular.woff) format('woff');
+  h1 {
+    @apply text-2xl;
+    @apply font-bold;
   }
-  @font-face {
-    font-family: Proxima Nova;
-    font-weight: 500;
-    src: url(/fonts/proxima-nova/500-medium.woff) format('woff');
+  h2 {
+    @apply text-xl;
   }
 }
